--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://u930882479_desarrollo:Merlos2012@srv826.hstgr.io:3306/u930882479_chocoChapin?schema=public"
+DATABASE_URL="mysql://u930882479_RchNorte:RchNorte1.@srv826.hstgr.io:3306/u930882479_RchNorte?schema=public"
