Apartado de login

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://u930882479_RchNorte:RchNorte1.@srv826.hstgr.io:3306/u930882479_RchNorte?schema=public"
+NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_SECRET = asasdasasas
