--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@heroicons/react": "^2.0.18",
     "@mui/material": "5.14.1",
     "@prisma/client": "^5.3.1",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
+    "mongoose": "^7.6.3",
     "next": "latest",
+    "next-auth": "^4.24.3",
     "prop-types": "^15.8.1",
     "react": "latest",
     "react-chartjs-2": "^5.2.0",
@@ -25,6 +30,7 @@
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
