--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/Modal.tsx", "src/app/clientes/page.tsx", "src/components/CustomIcons.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/Modal.tsx", "src/app/clientes/page.tsx", "src/components/CustomIcons.jsx", "node_modules/next-auth/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
